tests/ui/trait-bounds/issue-94999.stderr
error[E0277]: the trait bound `S: Clone` is not satisfied
  --> $DIR/issue-94999.rs:24:5
   |
LL |     <S as Identity<Q>>::T: Clone,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `S`
   |
help: consider annotating `S` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct S;
   |
help: add `#![feature(trivial_bounds)]` to the crate attributes to enable
   |
LL + #![feature(trivial_bounds)]
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
